<resources>
    <string name="app_name">ShoeStore</string>
    <!-- Login Strings -->
    <string name="email_label">Email:</string>
    <string name="email_hint">Email</string>
    <string name="password_label">Password:</string>
    <string name="password_hint">Password</string>
    <string name="email_error_message">Something went wrong with your email</string>
    <string name="password_error_message">Something went wrong with your password</string>
    <string name="sign_in">Sign in</string>
    <string name="create_an_account">Create an Account</string>
    <!-- Welcome Strings -->
    <string name="welcome_fragment_title">Welcome!</string>
    <string name="welcome_title">House of Hoops</string>
    <string name="welcome_body">House of Hoops gives you a taste of how the 90\'s drove the court.</string>
    <string name="welcome_instructions">To Instructions</string>
    <string name="welcome_label">WELCOME</string>
    <!-- Instructions Strings -->
    <string name="instructions_fragment_title">Instructions</string>
    <string name="instructions_title">Instructions</string>
    <string name="instructions_body">Welcome mate!\n\nNow you will be able to start your own catalogue.\n\nHere are some steps hope you will find helpful.\n\n1. Go to the Listing view. You will see this view empty the first time.\n\n2. Click on the add button you will find floating on the Listing page.\n\n3. In the next page, you will be able to add the name, company, size and a description of the shoe. Keep in mind that the name and company are mandatory.\n\n4. Once you have added your shoe you can click save.\n\n5. Click cancel if you don\'t want to add a new shoe.\n\n6. Either option will take you back to the listing screen.\n\n7. The listing screen will display your new shoe if you have added one, if not just the previous shoes.\n\n8. You can logout from the top menu option on the logout.</string>
    <string name="instructions_to_shoe_list">To Shoe List</string>
    <!-- shoe listing string -->
    <string name="listing_fragment_title">Catalogue</string>
    <string name="listing_add_details">Add a Shoe</string>
    <!-- shoe details -->
    <string name="details_fragment_title">Details</string>
    <string name="details_shoe_name">Shoe name</string>
    <string name="details_shoe_name_error">Please add a shoe name</string>
    <string name="details_company">Company</string>
    <string name="details_error_company">Please add a Company</string>
    <string name="details_shoe_size">Shoe size</string>
    <string name="details_shoe_size_hint">0.0</string>
    <string name="details_description">Description</string>
    <string name="details_cancel">Cancel</string>
    <string name="details_save">Save</string>
    <!-- String format -->
    <string name="to_double">%.1f</string>
</resources>