<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="loginViewModel"
            type="com.udacity.shoestore.login.view.LoginViewModel"
            />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/top_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="@dimen/margin_size_x10" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/bottom_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_end="@dimen/margin_size_x3" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/left_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="@dimen/margin_size_x3" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/right_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="@dimen/margin_size_x3" />

        <TextView
            android:id="@+id/email_label"
            style="@style/LabelLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/email_label"
            app:layout_constraintEnd_toStartOf="@id/right_guideline"
            app:layout_constraintStart_toEndOf="@id/left_guideline"
            app:layout_constraintTop_toBottomOf="@id/top_guideline" />

        <EditText
            android:id="@+id/edit_text_email_address"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/email_hint"
            android:inputType="textEmailAddress"
            app:layout_constraintStart_toEndOf="@id/left_guideline"
            app:layout_constraintEnd_toStartOf="@id/right_guideline"
            app:layout_constraintTop_toBottomOf="@id/email_label" />

        <TextView
            android:id="@+id/email_error"
            style="@style/ErrorLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_size_x4"
            android:text="@string/email_error_message"
            app:layout_constraintEnd_toStartOf="@id/right_guideline"
            app:layout_constraintStart_toEndOf="@id/left_guideline"
            app:layout_constraintTop_toBottomOf="@id/edit_text_email_address" />

        <TextView
            android:id="@+id/password_label"
            style="@style/LabelLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_size_x4"
            android:text="@string/password_label"
            app:layout_constraintEnd_toStartOf="@id/right_guideline"
            app:layout_constraintStart_toEndOf="@id/left_guideline"
            app:layout_constraintTop_toBottomOf="@id/email_error" />

        <EditText
            android:id="@+id/edit_text_password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:ems="10"
            android:inputType="textPassword"
            android:hint="@string/password_hint"
            app:layout_constraintStart_toEndOf="@id/left_guideline"
            app:layout_constraintEnd_toStartOf="@id/right_guideline"
            app:layout_constraintTop_toBottomOf="@id/password_label" />

        <TextView
            android:id="@+id/password_error"
            style="@style/ErrorLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_size_x4"
            android:text="@string/password_error_message"
            app:layout_constraintBottom_toTopOf="@id/sign_in"
            app:layout_constraintEnd_toStartOf="@id/right_guideline"
            app:layout_constraintStart_toEndOf="@id/left_guideline"
            app:layout_constraintTop_toBottomOf="@id/edit_text_password" />

        <Button
            android:id="@+id/sign_in"
            style="@style/ButtonApp.PrimaryButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_size_x4"
            android:onClick="@{() -> loginViewModel.onActionPressed()}"
            android:text="@string/sign_in"
            app:layout_constraintEnd_toStartOf="@id/right_guideline"
            app:layout_constraintStart_toEndOf="@id/left_guideline"
            app:layout_constraintTop_toBottomOf="@id/password_error" />

        <Button
            android:id="@+id/create_an_account"
            style="@style/ButtonApp.SecondaryButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_size_x4"
            android:text="@string/create_an_account"
            android:onClick="@{() -> loginViewModel.onActionPressed()}"
            app:layout_constraintEnd_toStartOf="@id/right_guideline"
            app:layout_constraintStart_toEndOf="@id/left_guideline"
            app:layout_constraintTop_toBottomOf="@id/sign_in" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>